<resources>
    <string name="finance">Keuangan</string>
    <string name="income">Pemasukan</string>
    <string name="expense">Pengeluaran</string>
    <string name="balance">Saldo</string>
    <string name="chart">Grafik</string>

    <string name="empty_note">Catatan Kosong</string>

    <string name="label_date">Tanggal</string>
    <string name="label_note">Catatan</string>
    <string name="label_category">Kategori</string>
    <string name="label_amount">Biaya</string>
    <string name="label_period">Periode</string>

    <string name="save">Simpan</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batal</string>
    <string name="add">Tambah</string>
    <string name="edit">Ubah</string>
    <string name="close">Tutup</string>
    <string name="note">Catat</string>
    <string name="backup">Cadangkan</string>
    <string name="sync">Sinkronkan</string>
    <string name="search">Cari</string>

    <string name="add_transaction">Tambah Transaksi</string>
    <string name="filter_transaction">Saring Transaksi</string>
    <string name="search_transaction_hint">Cari…</string>
    <string name="add_category">Tambah Kategori</string>
    <string name="edit_category">Ubah Kategori</string>

    <string name="google_backup_dialog_title">Cadangkan Data Catatan</string>
    <string name="google_backup_dialog_message">Data sekarang akan dicadangkan ke akun Google Anda</string>
    <string name="google_backup_in_process">Proses pencadangan sedang berjalan</string>
    <string name="google_backup_success">Proses pencadangan berhasil</string>
    <string name="google_backup_failed">Proses pencadangan gagal</string>
    <string name="google_backup_already_done">Anda sudah mencadangkan data</string>
    <string name="google_sync_dialog_title">Sinkronkan Data Catatan</string>
    <string name="google_sync_dialog_message">Data sekarang akan ditambahkan dengan data yang tersimpan di akun Google Anda</string>
    <string name="google_sync_in_process">Proses sinkronisasi sedang berjalan</string>
    <string name="google_sync_success">Proses sinkronisasi berhasil</string>
    <string name="google_sync_failed">Proses sinkronisasi gagal</string>

    <string name="success_add_data">Berhasil menambah data</string>

    <string name="error_required_field">Isian masih kosong</string>
    <string name="error_occured">Terjadi kesalahan</string>

    <string name="total_semicolon">Total:</string>

    <string name="dialog_msg_delete_confirmation">Apakah Anda ingin menghapus data ini?</string>

    <string-array name="expense_categories">
        <item>Makan</item>
        <item>Listrik</item>
        <item>Bensin</item>
        <item>Internet</item>
    </string-array>

    <string-array name="income_categories">
        <item>Gaji</item>
        <item>Deposito</item>
        <item>Freelance</item>
        <item>Tabungan</item>
    </string-array>
</resources>