<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.CreateTransactionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:title="@string/add_transaction" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIncome"
            style="@style/Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/income"
            app:backgroundTint="@color/toggle_income_bg" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExpense"
            style="@style/Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/expense"
            app:backgroundTint="@color/toggle_expense_bg" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/labelDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

    <TextView
        android:id="@+id/labelCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_category"
        app:layout_constraintEnd_toEndOf="@+id/labelDate"
        app:layout_constraintStart_toStartOf="@+id/labelDate"
        app:layout_constraintTop_toBottomOf="@+id/tilDate" />

    <TextView
        android:id="@+id/labelAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_amount"
        app:layout_constraintEnd_toEndOf="@+id/labelDate"
        app:layout_constraintStart_toStartOf="@+id/labelDate"
        app:layout_constraintTop_toBottomOf="@+id/tilCategory" />

    <TextView
        android:id="@+id/labelNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_note"
        app:layout_constraintEnd_toEndOf="@+id/labelDate"
        app:layout_constraintStart_toStartOf="@+id/labelDate"
        app:layout_constraintTop_toBottomOf="@+id/tilAmount" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDate"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/labelDate"
        app:layout_constraintStart_toStartOf="@+id/labelDate"
        app:layout_constraintTop_toBottomOf="@+id/labelDate"
        app:startIconDrawable="@drawable/ic_baseline_calendar_month_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCategory"
        style="@style/TextInputLayoutDropdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/btnEditCategory"
        app:layout_constraintStart_toStartOf="@+id/labelCategory"
        app:layout_constraintTop_toBottomOf="@+id/labelCategory"
        app:startIconDrawable="@drawable/ic_baseline_category_24">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/etCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btnEditCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/edit_category"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilCategory" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAmount"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/labelAmount"
        app:layout_constraintStart_toStartOf="@+id/labelAmount"
        app:layout_constraintTop_toBottomOf="@+id/labelAmount"
        app:startIconDrawable="@drawable/ic_prefix_rupiah">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNote"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/labelNote"
        app:layout_constraintStart_toStartOf="@+id/labelNote"
        app:layout_constraintTop_toBottomOf="@+id/labelNote"
        app:startIconDrawable="@drawable/ic_baseline_edit_note_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxEms="100"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:contentPadding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:text="@string/save"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                style="@style/Button.Outlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/delete"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/btnEdit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEdit"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/edit"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/btnDelete"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/pgbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/cardButton"
        app:layout_constraintEnd_toEndOf="@+id/cardButton"
        app:layout_constraintStart_toStartOf="@+id/cardButton"
        app:layout_constraintTop_toTopOf="@+id/cardButton" />
</androidx.constraintlayout.widget.ConstraintLayout>