<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.category.TransactionCategoryModalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/labelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_category"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/add"
            android:textAllCaps="false"
            app:icon="@drawable/ic_baseline_add_24"
            app:layout_constraintEnd_toEndOf="@+id/labelTitle"
            app:layout_constraintStart_toStartOf="@+id/labelTitle"
            app:layout_constraintTop_toBottomOf="@+id/labelTitle" />

        <ProgressBar
            android:id="@+id/pgbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
            app:layout_constraintEnd_toEndOf="@+id/btnAdd"
            app:layout_constraintStart_toStartOf="@+id/btnAdd"
            app:layout_constraintTop_toTopOf="@+id/btnAdd"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:checkedButton="@+id/btnExpense"
            app:layout_constraintTop_toBottomOf="@+id/btnAdd"
            app:selectionRequired="true"
            app:singleSelection="true"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnIncome"
                style="@style/Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:text="@string/income"
                app:backgroundTint="@color/toggle_income_bg" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnExpense"
                style="@style/Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:text="@string/expense"
                app:backgroundTint="@color/toggle_expense_bg" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>