<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:checkedButton="@+id/btnExpense"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIncome"
            style="@style/Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:text="@string/income"
            app:backgroundTint="@color/toggle_income_bg" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExpense"
            style="@style/Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:text="@string/expense"
            app:backgroundTint="@color/toggle_expense_bg" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/labelCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/label_category"
        app:layout_constraintBaseline_toBaselineOf="@+id/tilCategory"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCategory"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelCategory"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
        app:startIconDrawable="@drawable/ic_baseline_category_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>