<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.chart.ChartFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:title="@string/chart" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIncome"
            style="@style/Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/income"
            app:backgroundTint="@color/toggle_income_bg" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExpense"
            style="@style/Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/expense"
            app:backgroundTint="@color/toggle_expense_bg" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/tvPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_period"
        app:layout_constraintBottom_toBottomOf="@id/etPeriod"
        app:layout_constraintStart_toStartOf="@+id/toggleButton"
        app:layout_constraintTop_toTopOf="@+id/etPeriod" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPeriod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_outlined_grey"
        android:drawableStart="@drawable/ic_baseline_calendar_month_16"
        android:drawablePadding="8dp"
        android:focusable="false"
        android:minHeight="32dp"
        android:paddingHorizontal="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/toggleButton"
        app:layout_constraintStart_toEndOf="@+id/tvPeriod"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
        tools:text="Semua" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPeriod">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="240dp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/lineChart" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPieChartLegend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/pieChart" />

            <TextView
                android:id="@+id/tvAmountTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvPieChartLegend"
                tools:text="Rp. 500.000" />

            <TextView
                android:id="@+id/labelTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_semicolon"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvAmountTotal"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>