<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:title="@string/finance" />
    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/sectionHomeDashboard"
        layout="@layout/section_home_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/tvPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/label_period"
        app:layout_constraintBottom_toBottomOf="@id/etPeriod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etPeriod" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPeriod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_outlined_grey"
        android:drawableStart="@drawable/ic_baseline_calendar_month_16"
        android:drawablePadding="8dp"
        android:focusable="false"
        android:foreground="?selectableItemBackground"
        android:minHeight="32dp"
        android:paddingHorizontal="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPeriod"
        app:layout_constraintTop_toBottomOf="@+id/sectionHomeDashboard"
        tools:text="Semua" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPeriod">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTransactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="90dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="20"
            tools:listitem="@layout/item_list_header" />
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupEmptyNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="imgEmptyNote, tvEmptyNote" />

    <ImageView
        android:id="@+id/imgEmptyNote"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:contentDescription="@string/empty_note"
        android:src="@drawable/ic_baseline_android_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sectionHomeDashboard" />

    <TextView
        android:id="@+id/tvEmptyNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_note"
        app:layout_constraintEnd_toEndOf="@+id/imgEmptyNote"
        app:layout_constraintStart_toStartOf="@+id/imgEmptyNote"
        app:layout_constraintTop_toBottomOf="@+id/imgEmptyNote" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabCreateTransaction"
        style="@style/ExtendedFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>